--- a/Makefile.kentik
+++ b/Makefile.kentik
@@ -1,7 +1,7 @@
 .PHONY: all
 all:
-	go build -i -o bin/ratelimit-server ./src/service_cmd
-	go build -i -o bin/ratelimit-client ./src/client_cmd
+	go build -o bin/ratelimit-server ./src/service_cmd
+	go build -o bin/ratelimit-client ./src/client_cmd
 
 .PHONY: install
 install:
