Rate Limit: Reload on config changes (#9)
* watch for cfg changes

* ignore ops diff

* ignore ops diff

* try docker volumes

* try docker volumes

* log successfull reload

* adjust count

* adjust log level

* cleanup

* cleanup

* commit earthly

* cleanup

* revert compose changes

* delete pr workflow that is broken for years

--- a/project.yml
+++ b/project.yml
@@ -4,10 +4,12 @@ version: TAG
 target:
   build: unset GOPATH && make -f Makefile.kentik all install
   test: kbt go-mod-tests
-lint:
-  go:
-    - errcheck:error
 nomad:
   - service_group: apigw-ratelimit
     pack: service
     branch: main
+docker:
+  build:
+    base: kt-build-generic-bullseye:master
+  run:
+    base: kt-run-generic-bullseye:master
